--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   firebase_core: ^2.27.0
   firebase_database: ^10.4.0
   firebase_auth: ^4.17.4
+  razorpay_flutter: ^1.3.5
+  fluttertoast: ^8.2.12
 
 
   firebase_storage: ^11.6.0
